--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   supabase_dart_client:
     git:
       url: https://github.com/gabystdev/sdorm_annotations 
+      ref: main
 dev_dependencies:
   build_runner: ^2.3.3
   build_test: ^2.1.7
